# installer

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md  test.sh  test.toml
config/: default.toml  desktop.toml  example.toml  minimal.toml  server.toml  test.toml  update.sh
gui/: Cargo.toml  README.md
gui/src/: main.rs  sys.rs  worker.rs
gui/src/sys/: linux.rs  redox.rs
res/: test.toml  update.sh
src/: disk_wrapper.rs  install.rs  installer.rs  lib.rs  main.rs  redoxfs_ops.rs
src/config/: file.rs  file_impl.rs  general.rs  mod.rs  package.rs  transaction_file.rs  user.rs
src/install/: mod.rs
