[package]
name = "redox_installer_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
libredox = "0.1"
pkgar = "0.1.18"
pkgar-core = "0.1.18"
pkgar-keys = "0.1.18"
redox_installer = "0.2.37"
redox_syscall = "0.5"
toml = "0.5.6"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["winit"]

[patch.crates-io]
ring = { git = "https://gitlab.redox-os.org/redox-os/ring.git", branch = "redox-0.17.8" }
