[package]
name = "redox_installer_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pkgar = "0.2"
pkgar-core = "0.2"
pkgar-keys = "0.2"
redox_installer = { path = ".." }
redox_syscall = "0.9"
toml = "0.8"
# TODO: remove after pkgutils update
futures-channel = "0.3.32"

[target.'cfg(target_os = "redox")'.dependencies]
libredox = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# use the same rev with other cosmic app
rev = "bb10afd849f1ad172be6b78eeec347d548aa4fd7"
default-features = false
features = ["winit"]

[patch.crates-io]
ring = { git = "https://gitlab.redox-os.org/redox-os/ring.git", branch = "redox-0.17.8" }
